<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_existing_profiles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ahmed.cvmaker.MainActivity"

    >


   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"

           >

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:background="@color/colorBlue"
               android:gravity="center"
               android:padding="2dp"
               android:text="@string/helloUser"
               android:textColor="@android:color/white"
               android:textSize="20dp"
               android:textStyle="bold"

               />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="5dp"
               android:background="@drawable/rounded_corners2"
               android:gravity="center"
               android:orientation="vertical">

               <TextView
                   android:id="@+id/textView"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@color/colorBlue"
                   android:padding="2dp"
                   android:text="Advantages"
                   android:textColor="@android:color/white"
                   android:textSize="20dp"
                   android:textStyle="bold"

                   />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center_vertical"
                   android:orientation="horizontal">

                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_margin="6dp"
                       android:scaleType="centerCrop"
                       android:src="@drawable/fav" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/str1"
                       android:textSize="20sp"
                       android:textStyle="bold"

                       />

               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center_vertical"
                   android:orientation="horizontal">

                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_margin="6dp"
                       android:scaleType="centerCrop"
                       android:src="@drawable/fav" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/str2"
                       android:textSize="20sp"
                       android:textStyle="bold"

                       />

               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center_vertical"
                   android:orientation="horizontal">

                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_margin="6dp"
                       android:scaleType="centerCrop"
                       android:src="@drawable/fav" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/str3"
                       android:textSize="20sp"
                       android:textStyle="bold"

                       />

               </LinearLayout>

           </LinearLayout>


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="5dp"
               android:background="@drawable/rounded_corners2"
               android:orientation="vertical"
               android:padding="9dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="20"
                   android:gravity="center"
                   android:padding="3dp"
                   android:text="@string/startWith"
                   android:textSize="15sp"
                   android:textStyle="bold"

                   />

               <EditText
                   android:id="@+id/etProfileName"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="5dp"
                   android:gravity="center"
                   android:hint="@string/profileName"
                   android:inputType="text|textCapSentences"
                   android:padding="8dp"
                   android:background="@drawable/rounded_corners_et"
                   />

           </LinearLayout>

           <Button
               android:id="@+id/btnNext"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="5dp"
               android:onClick="NextButton"
               android:text="@string/next"
               android:textSize="20sp"
               android:textStyle="bold" />


       </LinearLayout>

   </ScrollView>

</RelativeLayout>