<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/personalSv"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/personalLl"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_corners"
                android:padding="8dp"
                android:text="Name"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_corners2"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="11dp"

                />

            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners"
                android:padding="8dp"
                android:text="Gender"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"

                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_corners2"
                android:drawSelectorOnTop="true"
                android:entries="@array/string_array_gender"
                android:padding="11dp"
                android:id="@+id/spinnerGender"
                />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners"
                android:padding="8dp"
                android:text="@string/dob"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/etDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_corners2"
                android:hint="@string/enterDob"
                android:inputType="textPersonName"
                android:padding="11dp"

                />

            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners"
                android:padding="8dp"
                android:text="Address"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/setAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_corners2"
                android:hint="@string/enterAdd"
                android:inputType="textPersonName"
                android:padding="11dp"

                />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:text="Languages Known"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="8dp"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterLang"
                android:background="@drawable/rounded_corners2"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="11dp"
                android:id="@+id/etLanguages"
                android:inputType="textPersonName"

                />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:text="Contact No."
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="8dp"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterCellNumber"
                android:background="@drawable/rounded_corners2"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="11dp"
                android:id="@+id/etContactNumber"
                android:inputType="phone"

                />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:text="Email"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="8dp"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterEmail"
                android:background="@drawable/rounded_corners2"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="11dp"
                android:id="@+id/etEmailId"
                android:inputType="textEmailAddress"

                />



        </LinearLayout>
    </ScrollView>


</LinearLayout>