<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"

        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <LinearLayout
                android:id="@+id/mailLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="3dp">

                <TextView
                    android:id="@+id/tvProfileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners"
                    android:text=""
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="3dp"
                    android:padding="7dp"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners2"
                    android:orientation="vertical"
                    android:padding="2dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@color/color1"
                        android:gravity="center_vertical"
                        android:onClick="personalDetails"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/user" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/personalDetails"
                            android:textSize="20sp"
                            android:textStyle="bold"

                            />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@color/color1"
                        android:gravity="center_vertical"
                        android:onClick="uploadPhoto"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/user" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/uploadPhoto"
                            android:textSize="20sp"
                            android:textStyle="bold"

                            />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@color/color1"
                        android:gravity="center_vertical"
                        android:onClick="educationDetails"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/user" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/educationDetails"
                            android:textSize="20sp"
                            android:textStyle="bold"

                            />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@color/color1"
                        android:gravity="center_vertical"
                        android:onClick="experienceDetails"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/user" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/experDetails"
                            android:textSize="20sp"
                            android:textStyle="bold"

                            />
                    </LinearLayout>

                    <!---->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@color/color1"
                        android:gravity="center_vertical"
                        android:onClick="projectDetails"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/user" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/projectDetails"
                            android:textSize="20sp"
                            android:textStyle="bold"

                            />
                    </LinearLayout>
                    <!---->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@color/color1"
                        android:gravity="center_vertical"
                        android:onClick="referenceDetails"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/user" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/referenceDetails"
                            android:textSize="20sp"
                            android:textStyle="bold"

                            />
                    </LinearLayout>
                    <!---->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@color/color1"
                        android:gravity="center_vertical"
                        android:onClick="otherDetails"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/user" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/otherDetails"
                            android:textSize="20sp"
                            android:textStyle="bold"

                            />
                    </LinearLayout>

                </LinearLayout>





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corners"

                        android:text="@string/complete"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:layout_marginBottom="3dp"
                        android:padding="7dp"
                        />
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@drawable/rounded_corners2"
                      >
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="3dp"
                          android:background="@color/color1"
                          android:gravity="center_vertical"
                          android:onClick="generateResume"
                          android:padding="5dp"

                          >

                          <ImageView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_margin="2dp"
                              android:scaleType="centerCrop"
                              android:src="@drawable/user" />

                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_margin="2dp"
                              android:text="@string/generateResume"
                              android:textSize="20sp"
                              android:textStyle="bold"

                              />
                      </LinearLayout>
                  </LinearLayout>
                </LinearLayout>

            </LinearLayout>








        </ScrollView>

    </LinearLayout>


</RelativeLayout>
